Added create_task function, received json data from frontend

--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -219,101 +219,7 @@
 <!-- COLLAPSE END -->
 
 <!-- PLANED TASKS VIEW START -->
-<div id="planned-tasks-view" class="border-bottom mb-3">
-    <h6>All Tasks <span>(4)</span></h6>
-
-    <div id="planned-tasks">
-        <!-- TASK 1 START -->
-        <div class="d-flex align-items-center border rounded mb-2 shadow">
-            <div class="p-3 checkbox">
-                <i
-                    class="bi bi-circle"
-                    onmouseover="showCheckIcon(this)"
-                    onmouseout="hideCheckIcon(this)"
-                    style="font-size: large; color: blue"
-                ></i>
-            </div>
-            <div class="flex-grow-1 p-2 taskdetail">
-                <div class="d-flex flex-column">
-                    <div>Task 2</div>
-                    <div class="d-flex flex-wrap">
-                        <div
-                            class="me-3"
-                            style="font-size: small; color: rgb(255, 0, 0)"
-                        >
-                            <i class="bi bi-calendar-check"></i>
-                            <span>Due Tue, May 14</span>
-                        </div>
-                        <div class="me-3" style="font-size: small">
-                            <i class="bi bi-bell"></i>
-                            <span>Tue, May 14</span>
-                        </div>
-                        <div style="font-size: small">
-                            <i class="bi bi-repeat"></i>
-                            <span> Daily</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="p-3 starbutton">
-                <i
-                    class="bi bi-star"
-                    data-bs-toggle="tooltip"
-                    style="font-size: large; color: blue"
-                    data-bs-placement="bottom"
-                    title="Mask task as important"
-                >
-                </i>
-            </div>
-        </div>
-        <!-- TASK 1 END -->
-
-        <!-- TASK 2 START -->
-        <div class="d-flex align-items-center border rounded mb-2 shadow">
-            <div class="p-3 checkbox">
-                <i
-                    class="bi bi-circle"
-                    onmouseover="showCheckIcon(this)"
-                    onmouseout="hideCheckIcon(this)"
-                    style="font-size: large; color: blue"
-                ></i>
-            </div>
-            <div class="flex-grow-1 p-2 taskdetail">
-                <div class="d-flex flex-column">
-                    <div>Task 2</div>
-                    <div class="d-flex flex-wrap">
-                        <div
-                            class="me-3"
-                            style="font-size: small; color: rgb(255, 0, 0)"
-                        >
-                            <i class="bi bi-calendar-check"></i>
-                            <span>Due Tue, May 14</span>
-                        </div>
-                        <div class="me-3" style="font-size: small">
-                            <i class="bi bi-bell"></i>
-                            <span>Tue, May 14</span>
-                        </div>
-                        <div style="font-size: small">
-                            <i class="bi bi-repeat"></i>
-                            <span> Daily</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="p-3 starbutton">
-                <i
-                    class="bi bi-star"
-                    data-bs-toggle="tooltip"
-                    style="font-size: large; color: blue"
-                    data-bs-placement="bottom"
-                    title="Mask task as important"
-                >
-                </i>
-            </div>
-        </div>
-        <!-- TASK 2 END -->
-    </div>
-</div>
+<div id="planned-tasks-view" class="border-bottom mb-3"></div>
 <!-- PLANNED TASK VIEW END -->
 
 <!-- COMPLETED TASKS VIEW START -->
