--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -101,9 +101,6 @@
 </div>
 <!-- HEADER END -->
 
-
-
-
 <!-- COLLAPSE START -->
 <div id="new-task-form-view" class="collapse border-bottom mb-3">
     <h6>New Task</h6>
@@ -218,77 +215,28 @@
 </div>
 <!-- COLLAPSE END -->
 
-<!-- PLANED TASKS VIEW START -->
-<div id="planned-tasks-view" class="border-bottom mb-3"></div>
-<!-- PLANNED TASK VIEW END -->
-
-<!-- COMPLETED TASKS VIEW START -->
-<div id="completed-tasks-view">
-    {% if completed_tasks %}
-        {% for task in completed_tasks %}
-            <h6 data-bs-toggle="collapse" data-bs-target="#comleted-tasks">
-                <i class="bi bi-caret-down-fill" onclick="toggleCaretIcon(this)"
-                    >Completed <span>({{ completed_tasks.count }})</span>
-                </i>
-            </h6>
-
-            <div id="comleted-tasks" class="collapse">
-                <!-- TASK 1 START-->
-                <div class="d-flex align-items-center border rounded mb-2 shadow">
-                    <div class="p-3 checkbox">
-                        <i
-                            class="bi bi-check-circle-fill"
-                            style="color: blue; font-size: large"
-                        ></i>
-                    </div>
-                    <div class="flex-grow-1 p-2 taskdetail">
-                        <div class="d-flex flex-column">
-                            <div>{{ task.title }}</div>
-                            <div class="d-flex flex-wrap">
-                                <div
-                                    class="me-3"
-                                    style="font-size: small; color: rgb(255, 0, 0)"
-                                >
-                                    <i class="bi bi-calendar-check"></i>
-                                    <span>Due {{ task.due_date }}</span>
-                                </div>
-                                <div class="me-3" style="font-size: small">
-                                    <i class="bi bi-bell"></i>
-                                    <span>{{ task.reminder_date}}</span>
-                                </div>
-                                <div style="font-size: small">
-                                    <i class="bi bi-repeat"></i>
-                                    <span>{{ task.repeat }} </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="p-3 starbutton">
-                        <i
-                            class="bi bi-star"
-                            data-bs-toggle="tooltip"
-                            style="font-size: large; color: blue"
-                            data-bs-placement="bottom"
-                            title="Mask task as important"
-                        >
-                        </i>
-                    </div>
-                </div>
-                <!-- TASK 1 END-->
-            </div>
-        {% endfor %}
-    {% endif %}
+<div id="planned" class="border-bottom mb-3">
+    <h6 id="planned-tasks-count"></h6>
 </div>
-<!-- COMPLETED TASKS VIEW END -->
+
+<div id="complete">
+    <h6 id="complete-tasks-count"></h6>
+</div>
+
 
 <!-- FOOTER START -->
-<div id="footer" class="border-top mt-3 p-3 text-center" style="font-size: smaller;">
-    <strong>This is </strong><a href="https://cs50.harvard.edu/web/2020/">CS50’s Web Programming with Python and JavaScript</a>
+<div
+    id="footer"
+    class="border-top mt-3 p-3 text-center"
+    style="font-size: smaller"
+>
+    <strong>This is </strong
+    ><a href="https://cs50.harvard.edu/web/2020/"
+        >CS50’s Web Programming with Python and JavaScript</a
+    >
 </div>
 <!-- FOOTER END -->
 
-{% endblock %}
-
-{% block script %}
+{% endblock %} {% block script %}
 <script src="{% static 'todo/index.js' %}"></script>
 {% endblock %}
