--- a/todo/templates/todo/layout.html
+++ b/todo/templates/todo/layout.html
@@ -26,7 +26,7 @@
         {% block script %} {% endblock %}
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             
             {% block body %}
             {% endblock %}          
