--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -1,242 +1,20 @@
 {% extends "todo/layout.html" %} {% load static %} {% block body %}
 
 <!-- HEADER START -->
-<div id="header" class="border-bottom mb-3">
-    <!-- HEADER START -->
-    <header class="p-2 bg-primary border-bottom mb-2">
-        <div
-            class="d-flex justify-content-between align-items-center bg-primary p-0"
-        >
-            <a
-                href="#"
-                class="d-flex align-items-center link-body-emphasis text-decoration-none"
-            >
-                <i
-                    class="bi bi-list-task"
-                    style="font-size: xx-large; color: white"
-                ></i>
-            </a>
-
-            <form class="col-4" role="search">
-                <input
-                    type="search"
-                    class="form-control mb-0"
-                    placeholder="Search..."
-                    aria-label="Search"
-                />
-            </form>
-
-            <!-- DROPDOWN MENU -->
-            <div class="dropdown">
-                <a
-                    href="#"
-                    class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle text-white"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                >
-                    <img
-                        src="https://github.com/mdo.png"
-                        alt=""
-                        width="32"
-                        height="32"
-                        class="rounded-circle me-2"
-                    />
-                    <strong>{{ request.user.username }}</strong>
-                </a>
-                <ul class="dropdown-menu text-small shadow">
-                    <li>
-                        <a class="dropdown-item" href="#">Settings</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#">Profile</a>
-                    </li>
-                    <li><hr class="dropdown-divider" /></li>
-                    <li>
-                        <a class="dropdown-item" href="{% url 'logout' %}"
-                            >Sign out</a
-                        >
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </header>
-    <!-- HEADER END -->
-
-    <!-- BUTTON GROUP START -->
-    <div id="buttonGroup" class="mb-2">
-        <div class="d-flex justify-content-between align-items-center">
-            <div>
-                <button class="btn btn-sm btn-outline-primary" id="all">
-                    <i class="bi bi-house-heart"></i> All
-                    <span>4</span>
-                </button>
-                <button class="btn btn-sm btn-outline-primary" id="today">
-                    <i class="bi bi-sun-fill"></i> Today
-                    <span>3</span>
-                </button>
-                <button class="btn btn-sm btn-outline-primary" id="important">
-                    <i class="bi bi-star-fill"></i> Important
-                    <span>2</span>
-                </button>
-            </div>
-
-            <div>
-                <i
-                    class="bi bi-sort-down me-2"
-                    style="font-size: x-large; color: blue"
-                ></i>
-
-                <i
-                    class="bi bi-plus-circle"
-                    style="font-size: x-large; color: blue"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#new-task-form-view"
-                    onclick="togglePlusIcon(this)"
-                ></i>
-            </div>
-        </div>
-    </div>
-
-    <!-- BUTTON GROUP END -->
-</div>
+{% include 'todo/navbar.html' %}
 <!-- HEADER END -->
 
 <!-- COLLAPSE START -->
-<div id="new-task-form-view" class="collapse border-bottom mb-3">
-    <h6>New Task</h6>
-    <form id="newTaskForm" style="margin-bottom: 0px">
-        <div class="d-flex align-items-center border rounded shadow-sm">
-            <div class="px-3">
-                <i
-                    class="bi bi-circle"
-                    onmouseover="showCheckIcon(this)"
-                    onmouseout="hideCheckIcon(this)"
-                    style="font-size: large; color: blue"
-                ></i>
-            </div>
-            <div class="flex-grow-1 p-2">
-                <input id="newTaskTitle" placeholder="New Task" type="text" />
-            </div>
-        </div>
-
-        <div id="newTaskMetaData" class="mb-3">
-            <div
-                class="d-flex justify-content-between border rounded shadow p-2"
-            >
-                <div class="d-flex flex-wrap align-items-center">
-                    <div class="me-3" id="dueDateInputGroup">
-                        <i
-                            class="bi bi-calendar-check"
-                            data-bs-toggle="tooltip"
-                            data-bs-placement="bottom"
-                            title="Add due date"
-                            onclick="addDueDate()"
-                            id="dueDateInput"
-                            style="display: inline"
-                        ></i>
-                        <input
-                            id="dueDatePicker"
-                            type="date"
-                            style="font-size: smaller; display: none"
-                        />
-                        <div
-                            id="dueDateValueHolder"
-                            class="rounded border p-1"
-                            style="font-size: small; display: none"
-                            onclick="addDueDate()"
-                        ></div>
-                    </div>
-
-                    <div class="me-3">
-                        <i
-                            class="bi bi-bell"
-                            data-bs-toggle="tooltip"
-                            data-bs-placement="bottom"
-                            title="Remind me"
-                            onclick="addReminderDate()"
-                            id="reminderDateInput"
-                        ></i>
-
-                        <input
-                            type="date"
-                            id="reminderDatePicker"
-                            style="font-size: smaller; display: none"
-                        />
-                        <div
-                            id="reminderDateHolder"
-                            class="rounded border p-1"
-                            style="font-size: small; display: none"
-                            onclick="addReminderDate()"
-                        ></div>
-                    </div>
-
-                    <div class="">
-                        <i
-                            class="bi bi-repeat"
-                            data-bs-toggle="tooltip"
-                            data-bs-placement="bottom"
-                            title="Repeat"
-                            onclick="addRepeatOptions()"
-                            id="repeatInput"
-                        ></i>
-
-                        <select
-                            style="font-size: smaller; display: none"
-                            id="selectRepeatBox"
-                        >
-                            <option value="" disabled selected>
-                                Select 1 option
-                            </option>
-                            <option value="Daily">Daily</option>
-                            <option value="Weekly">Weekly</option>
-                            <option value="Montly">Monthly</option>
-                            <option value="Yearly">Yearly</option>
-                        </select>
-                        <div
-                            id="repeatOptionHolder"
-                            class="rounded border p-1"
-                            style="font-size: small; display: none"
-                            onclick="addRepeatOptions()"
-                        ></div>
-                    </div>
-                </div>
-
-                <div>
-                    <button
-                        class="btn btn-outline-primary btn-sm"
-                        id="addTaskButton"
-                    >
-                        Add
-                    </button>
-                </div>
-            </div>
-        </div>
-    </form>
-</div>
+{% include 'todo/newtaskform.html' %}
 <!-- COLLAPSE END -->
 
-<div id="planned" class="border-bottom mb-3">
-    <h6 id="planned-tasks-count"></h6>
-</div>
+<div id="planned" class="border-bottom mb-3"></div>
 
-<div id="complete">
-    <h6 id="complete-tasks-count"></h6>
-</div>
-
+<div id="complete"></div>
 
 <!-- FOOTER START -->
-<div
-    id="footer"
-    class="border-top mt-3 p-3 text-center"
-    style="font-size: smaller"
->
-    <strong>This is </strong
-    ><a href="https://cs50.harvard.edu/web/2020/"
-        >CS50’s Web Programming with Python and JavaScript</a
-    >
-</div>
+{% include 'todo/footer.html' %}
 <!-- FOOTER END -->
-
 {% endblock %} {% block script %}
 <script src="{% static 'todo/index.js' %}"></script>
 {% endblock %}
