Moved load_tasks(task_list) to bottom of index.js

--- a/todo/templates/todo/index copy.html
+++ b/todo/templates/todo/index copy.html
@@ -347,3 +347,12 @@
 {% endblock %} {% block script %}
 <script src="{% static 'todo/index.js' %}"></script>
 {% endblock %}
+
+<!-- planned tasks -->
+
+<div id="complete">
+    <h6 data-bs-toggle="collapse" data-bs-target="#completed-tasks">
+        <i id="complete-tasks-count" class="bi bi-caret-down-fill" onclick="toggleCaretIcon(this)"></i>
+    </h6>
+    <div id="completed-tasks" class="collapse"></div>
+</div>
