--- a/todo/templates/todo/index copy.html
+++ b/todo/templates/todo/index copy.html
@@ -351,8 +351,13 @@
 <!-- planned tasks -->
 
 <div id="complete">
+
     <h6 data-bs-toggle="collapse" data-bs-target="#completed-tasks">
-        <i id="complete-tasks-count" class="bi bi-caret-down-fill" onclick="toggleCaretIcon(this)"></i>
+        <i
+            id="complete-tasks-count"
+            class="bi bi-caret-down-fill"
+            onclick="toggleCaretIcon(this)"
+        ></i>
     </h6>
     <div id="completed-tasks" class="collapse"></div>
 </div>
