--- a/todo/templates/todo/newtaskform.html
+++ b/todo/templates/todo/newtaskform.html
@@ -1,7 +1,7 @@
 <!-- COLLAPSE START -->
 <div id="new-task-form-view" class="collapse border-bottom mb-3">
     <h6>New Task</h6>
-    <form id="newTaskForm" style="margin-bottom: 0px">
+    <form id="newTaskForm" style="margin-bottom: 0px; background-color: white">
         <div class="d-flex align-items-center border rounded shadow-sm">
             <div class="px-3">
                 <i
