--- a/todo/templates/todo/layout.html
+++ b/todo/templates/todo/layout.html
@@ -27,10 +27,7 @@
     </head>
     <body>
         <div class="container-fluid">
-            
-            {% block body %}
-            {% endblock %}          
+            {% block body %} {% endblock %}
         </div>
-
     </body>
 </html>
