change font to red if over due

--- a/todo/templates/todo/newtaskform.html
+++ b/todo/templates/todo/newtaskform.html
@@ -18,7 +18,7 @@
 
         <div id="newTaskMetaData" class="mb-3">
             <div
-                class="d-flex justify-content-between border rounded shadow p-2"
+                class="d-flex justify-content-between border rounded shadow-sm p-2"
             >
                 <div class="d-flex flex-wrap align-items-center">
                     <div class="me-3" id="dueDateInputGroup">
