--- a/todo/templates/todo/navbar.html
+++ b/todo/templates/todo/navbar.html
@@ -61,25 +61,33 @@
     <!-- HEADER END -->
 
     <!-- BUTTON GROUP START -->
-    <div id="buttonGroup" class="mb-2">
+    <div class="mb-2">
         <div class="d-flex justify-content-between align-items-center">
-            <div>        
-                <button class="task-list btn btn-outline-primary btn-sm" data-taskslist="all">
+            <div id="buttonGroup">
+                <button
+                    class="task-list btn btn-outline-primary btn-sm"
+                    data-taskslist="all"
+                >
                     <i class="bi bi-house-heart"></i>
                     <span class="task-count">All</span>
                     <span id="allTasksCount"></span>
                 </button>
-                <button class="task-list btn btn-outline-primary btn-sm" data-taskslist="today">
+                <button
+                    class="task-list btn btn-outline-primary btn-sm"
+                    data-taskslist="today"
+                >
                     <i class="bi bi-sun-fill"></i>
                     <span class="task-count">Today</span>
                     <span id="todayTasksCount"></span>
                 </button>
-                <button class="task-list btn btn-outline-primary btn-sm" data-taskslist="important">
+                <button
+                    class="task-list btn btn-outline-primary btn-sm"
+                    data-taskslist="important"
+                >
                     <i class="bi bi-star-fill"></i>
                     <span class="task-count">Important</span>
                     <span id="importantTasksCount"></span>
                 </button>
-                
             </div>
 
             <div>
@@ -93,22 +101,22 @@
                     <li class="dropdown-header text-center"><b>Sort by</b></li>
                     <li class="dropdown-divider"><hr /></li>
                     <li class="dropdown-item">
-                        <p class="sort-tasks" data-task="important">
+                        <p class="sort-tasks" data-sort_by="important">
                             <i class="bi bi-star"></i> Importance
                         </p>
                     </li>
                     <li class="dropdown-item">
-                        <p class="sort-tasks" data-task="due_date">
+                        <p class="sort-tasks" data-sort_by="due_date">
                             <i class="bi bi-bell"></i> Due date
                         </p>
                     </li>
                     <li class="dropdown-item">
-                        <p class="sort-tasks" data-task="title">
+                        <p class="sort-tasks" data-sort_by="title">
                             <i class="bi bi-sort-alpha-down"></i> Alphabetically
                         </p>
                     </li>
                     <li class="dropdown-item">
-                        <p class="sort-tasks" data-task="created_at">
+                        <p class="sort-tasks" data-sort_by="created_at">
                             <i class="bi bi-database-add"></i> Creation date
                         </p>
                     </li>
