combined all sortBy options

--- a/todo/static/todo/styles.css
+++ b/todo/static/todo/styles.css
@@ -27,3 +27,7 @@ input:-webkit-autofill:focus {
 input:-internal-autofill-selected {
     background-color: transparent;
 }
+
+#sortBy {
+    float: right;
+}
