--- a/todo/templates/todo/navbar.html
+++ b/todo/templates/todo/navbar.html
@@ -102,22 +102,42 @@
                     <li class="dropdown-divider"><hr /></li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="important">
-                            <i class="bi bi-star"></i> Importance
+                            <i class="bi bi-star"></i><i class="bi bi-arrow-up"></i> Importance (Asc)
+                        </p>
+                    </li>
+                    <li class="dropdown-item">
+                        <p class="sort-tasks" data-sort_by="-important">
+                            <i class="bi bi-star"></i><i class="bi bi-arrow-down"></i> Importance (Desc)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="due_date">
-                            <i class="bi bi-bell"></i> Due date
+                            <i class="bi bi-bell"></i><i class="bi bi-arrow-up"></i> Due date (Asc)
+                        </p>
+                    </li>
+                    <li class="dropdown-item">
+                        <p class="sort-tasks" data-sort_by="-due_date">
+                            <i class="bi bi-bell"></i><i class="bi bi-arrow-down"></i> Due date (Desc)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="title">
-                            <i class="bi bi-sort-alpha-down"></i> Alphabetically
+                            <i class="bi bi-arrow-down-up"></i><i class="bi bi-arrow-up"></i> Alphabetically (Asc)
+                        </p>
+                    </li>
+                    <li class="dropdown-item">
+                        <p class="sort-tasks" data-sort_by="-title">
+                            <i class="bi bi-arrow-down-up"></i><i class="bi bi-arrow-down"></i> Alphabetically (Desc)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="created_at">
-                            <i class="bi bi-database-add"></i> Creation date
+                            <i class="bi bi-database-add"></i><i class="bi bi-arrow-up"></i> Creation date (Asc)
+                        </p>
+                    </li>
+                    <li class="dropdown-item">
+                        <p class="sort-tasks" data-sort_by="-created_at">
+                            <i class="bi bi-database-add"></i><i class="bi bi-arrow-down"></i> Creation date (Desc)
                         </p>
                     </li>
                 </ul>
@@ -136,3 +156,5 @@
     <!-- BUTTON GROUP END -->
 </div>
 <!-- HEADER END -->
+
+
