Added conditions to show/hide start and trash icons

--- a/todo/templates/todo/navbar.html
+++ b/todo/templates/todo/navbar.html
@@ -98,8 +98,8 @@
                     data-bs-toggle="dropdown"
                 ></i>
                 <ul class="dropdown-menu">
-                    <li class="dropdown-header text-center"><b>Sort by</b></li>
-                    <li class="dropdown-divider"><hr /></li>
+                    <li class="dropdown-header text-center p-0"><b>Sort by</b></li>
+                    <li class="dropdown-divider m-0"><hr /></li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="important">
                             <i class="bi bi-star"></i><i class="bi bi-arrow-up"></i> Importance (Asc)
