--- a/todo/static/todo/styles.css
+++ b/todo/static/todo/styles.css
@@ -16,6 +16,10 @@ input:-webkit-autofill,
 input:-webkit-autofill:focus {
     transition: background-color 0s 600000s, color 0s 600000s !important;
 }
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:focus {
+    transition: background-color 0s 600000s, color 0s 600000s !important;
+}
 
 #newTaskTitle {
     background-color: transparent;
@@ -27,7 +31,28 @@ input:-webkit-autofill:focus {
 input:-internal-autofill-selected {
     background-color: transparent;
 }
+textarea:-internal-autofill-selected {
+    background-color: transparent;
+}
+
+textarea {
+    border: none;
+    overflow: auto;
+    outline: none;
+    width: 100%;
+
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+
+    resize: none; /*remove the resize handle on the bottom right*/
+}
 
 #sortBy {
     float: right;
+}
+
+
+.form_edit {
+    display: none;
 }
