Combined into only 1 updateTitle function

--- a/todo/templates/todo/navbar.html
+++ b/todo/templates/todo/navbar.html
@@ -98,46 +98,68 @@
                     data-bs-toggle="dropdown"
                 ></i>
                 <ul class="dropdown-menu">
-                    <li class="dropdown-header text-center p-0"><b>Sort by</b></li>
+                    <li class="dropdown-header text-center p-1">
+                        <b>Sort by</b>
+                    </li>
                     <li class="dropdown-divider m-0"><hr /></li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="important">
-                            <i class="bi bi-star"></i><i class="bi bi-arrow-up"></i> Importance (Asc)
+                            <i class="bi bi-star"></i> Importance (<i
+                                class="bi bi-sort-up"
+                            ></i
+                            >)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="-important">
-                            <i class="bi bi-star"></i><i class="bi bi-arrow-down"></i> Importance (Desc)
+                            <i class="bi bi-star"></i> Importance (<i
+                                class="bi bi-sort-down-alt"
+                            ></i
+                            >)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="due_date">
-                            <i class="bi bi-bell"></i><i class="bi bi-arrow-up"></i> Due date (Asc)
+                            <i class="bi bi-bell"></i> Due date (<i
+                                class="bi bi-sort-up"
+                            ></i
+                            >)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="-due_date">
-                            <i class="bi bi-bell"></i><i class="bi bi-arrow-down"></i> Due date (Desc)
+                            <i class="bi bi-bell"></i> Due date (<i
+                                class="bi bi-sort-down-alt"
+                            ></i
+                            >)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="title">
-                            <i class="bi bi-arrow-down-up"></i><i class="bi bi-arrow-up"></i> Alphabetically (Asc)
+                            <i class="bi bi-arrow-down-up"></i> Alphabetically
+                            (<i class="bi bi-sort-up"></i>)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="-title">
-                            <i class="bi bi-arrow-down-up"></i><i class="bi bi-arrow-down"></i> Alphabetically (Desc)
+                            <i class="bi bi-arrow-down-up"></i> Alphabetically
+                            (<i class="bi bi-sort-down-alt"></i>)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="created_at">
-                            <i class="bi bi-database-add"></i><i class="bi bi-arrow-up"></i> Creation date (Asc)
+                            <i class="bi bi-database-add"></i> Creation date (<i
+                                class="bi bi-sort-up"
+                            ></i
+                            >)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="-created_at">
-                            <i class="bi bi-database-add"></i><i class="bi bi-arrow-down"></i> Creation date (Desc)
+                            <i class="bi bi-database-add"></i> Creation date (<i
+                                class="bi bi-sort-down-alt"
+                            ></i
+                            >)
                         </p>
                     </li>
                 </ul>
@@ -156,5 +178,3 @@
     <!-- BUTTON GROUP END -->
 </div>
 <!-- HEADER END -->
-
-
