added clipboard-check-fill icon and revised the toggleImportant function

--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -8,9 +8,9 @@
 {% include 'todo/newtaskform.html' %}
 
 
-<div id="planned" class="border-bottom mb-3"></div>
+<div id="planned-tasks-view" class="border-bottom mb-3"></div>
 
-<div id="complete"></div>
+<div id="complete-tasks-view"></div>
 
 
 {% include 'todo/footer.html' %}
