--- a/todo/templates/todo/navbar.html
+++ b/todo/templates/todo/navbar.html
@@ -1,7 +1,9 @@
-<!-- HEADER START -->
+{% load static %}
+
+
 <div id="header" class="border-bottom mb-3">
-    <!-- HEADER START -->
-    <header class="p-2 bg-primary border-bottom mb-2">
+
+    <header class="px-2 bg-primary border-bottom mb-2">
         <div
             class="d-flex justify-content-between align-items-center bg-primary p-0"
         >
@@ -9,8 +11,8 @@
                 href="#"
                 class="d-flex align-items-center link-body-emphasis text-decoration-none"
             >
-                <i
-                    class="bi bi-list-task"
+                <i 
+                    class="bi bi-clipboard-check-fill"
                     style="font-size: xx-large; color: white"
                 ></i>
             </a>
