--- a/todo/templates/todo/footer.html
+++ b/todo/templates/todo/footer.html
@@ -1,7 +1,7 @@
 <!-- FOOTER START -->
 <div
     id="footer"
-    class="border-top mt-3 p-5 text-center"
+    class="mt-3 p-5 text-center"
     style="font-size: smaller"
 >
     <strong>This is </strong
