--- a/todo/templates/todo/navbar.html
+++ b/todo/templates/todo/navbar.html
@@ -23,6 +23,8 @@
                     class="form-control mb-0"
                     placeholder="Search..."
                     aria-label="Search"
+                    name="q"
+                    id="search"
                 />
             </form>
 
