--- a/todo/templates/todo/newtaskform.html
+++ b/todo/templates/todo/newtaskform.html
@@ -3,7 +3,7 @@
     <h6>New Task</h6>
     <form id="newTaskForm" style="margin-bottom: 0px; background-color: white">
         <div class="d-flex align-items-center border rounded shadow-sm">
-            <div class="px-3">
+            <!-- <div class="px-3">
                 <i
                     class="bi bi-circle"
                     onmouseover="showCheckIcon(this)"
@@ -11,7 +11,7 @@
                     style="font-size: large; color: blue"
                     
                 ></i>
-            </div>
+            </div> -->
             <div class="flex-grow-1 p-2">
                 <input id="newTaskTitle" placeholder="New Task" type="text" />
             </div>
