--- a/todo/templates/todo/navbar.html
+++ b/todo/templates/todo/navbar.html
@@ -4,13 +4,8 @@
 <div id="header" class="border-bottom mb-3">
 
     <header class="px-2 bg-primary border-bottom mb-2">
-        <div
-            class="d-flex justify-content-between align-items-center bg-primary p-0"
-        >
-            <a
-                href="#"
-                class="d-flex align-items-center link-body-emphasis text-decoration-none"
-            >
+        <div class="d-flex justify-content-between align-items-center bg-primary p-0">
+            <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
                 <i 
                     class="bi bi-clipboard-check-fill"
                     style="font-size: xx-large; color: white"
@@ -65,7 +60,7 @@
     <!-- HEADER END -->
 
     <!-- BUTTON GROUP START -->
-    <div class="mb-2">
+    <div class="mb-2 px-3">
         <div class="d-flex justify-content-between align-items-center">
             <div id="buttonGroup">
                 <button
@@ -108,62 +103,42 @@
                     <li class="dropdown-divider m-0"><hr /></li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="important">
-                            <i class="bi bi-star"></i> Importance (<i
-                                class="bi bi-sort-up"
-                            ></i
-                            >)
+                            <i class="bi bi-star"></i> &nbsp; Importance (<i class="bi bi-arrow-up"></i>)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="-important">
-                            <i class="bi bi-star"></i> Importance (<i
-                                class="bi bi-sort-down-alt"
-                            ></i
-                            >)
+                            <i class="bi bi-star"></i> &nbsp; Importance (<i class="bi bi-arrow-down"></i>)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="due_date">
-                            <i class="bi bi-bell"></i> Due date (<i
-                                class="bi bi-sort-up"
-                            ></i
-                            >)
+                            <i class="bi bi-bell"></i> &nbsp; Due date (<i class="bi bi-arrow-up"></i>)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="-due_date">
-                            <i class="bi bi-bell"></i> Due date (<i
-                                class="bi bi-sort-down-alt"
-                            ></i
-                            >)
+                            <i class="bi bi-bell"></i> &nbsp; Due date (<i class="bi bi-arrow-down"></i>)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="title">
-                            <i class="bi bi-arrow-down-up"></i> Alphabetically
-                            (<i class="bi bi-sort-up"></i>)
+                            <i class="bi bi-arrow-down-up"></i> &nbsp; Alphabetically (<i class="bi bi-arrow-up"></i>)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="-title">
-                            <i class="bi bi-arrow-down-up"></i> Alphabetically
-                            (<i class="bi bi-sort-down-alt"></i>)
+                            <i class="bi bi-arrow-down-up"></i> &nbsp; Alphabetically (<i class="bi bi-arrow-down"></i>)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="created_at">
-                            <i class="bi bi-database-add"></i> Creation date (<i
-                                class="bi bi-sort-up"
-                            ></i
-                            >)
+                            <i class="bi bi-database-add"></i> &nbsp; Creation date (<i class="bi bi-arrow-up"></i>)
                         </p>
                     </li>
                     <li class="dropdown-item">
                         <p class="sort-tasks" data-sort_by="-created_at">
-                            <i class="bi bi-database-add"></i> Creation date (<i
-                                class="bi bi-sort-down-alt"
-                            ></i
-                            >)
+                            <i class="bi bi-database-add"></i> &nbsp; Creation date (<i class="bi bi-arrow-down"></i>)
                         </p>
                     </li>
                 </ul>
