Combine all edit routes into only 1 single route and avoid repeat code

--- a/todo/templates/todo/navbar.html
+++ b/todo/templates/todo/navbar.html
@@ -144,7 +144,7 @@
                 </ul>
 
                 <i
-                    class="bi bi-plus-circle"
+                    class="bi bi-plus-circle-fill"
                     style="font-size: x-large; color: blue"
                     data-bs-toggle="collapse"
                     data-bs-target="#new-task-form-view"
